--- a/simple-react/package.json
+++ b/simple-react/package.json
@@ -13,8 +13,7 @@
   },
   "dependencies": {
     "babelify": "^7.3.0",
-    "express": "^4.14.0",
-    "pug": "^2.0.0-beta6"
+    "express": "^4.14.0"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
