removed promises and generators from prelminiary concept section

--- a/a few things before starting/package.json
+++ b/a few things before starting/package.json
@@ -10,20 +10,15 @@
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-node6": "^11.0.0",
-    "babel-register": "^6.24.1",
-    "es6-promisify": "^5.0.0",
-    "regenerator-runtime": "^0.10.5"
+    "babel-register": "^6.24.1"
   },
   "babel": {
     "presets": [
       "node6"
     ],
     "plugins": [
-      "transform-object-rest-spread",
-      "transform-regenerator"
+      "transform-object-rest-spread"
     ]
   },
-  "devDependencies": {
-    "babel-plugin-transform-regenerator": "^6.24.1"
-  }
+  "devDependencies": {}
 }
